<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/_16sdp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    tools:context=".arch.ui.home.prompt.PromptFragment">

    <View
        android:id="@+id/notch"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_4sdp"
        android:background="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notch" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblTransfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_21sdp"
        android:text="@string/label_transfer"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2.Core"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvProfile"
        android:layout_width="@dimen/_46sdp"
        android:layout_height="@dimen/_46sdp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2.Core"
        android:text="@string/placeholder_profile"
        android:textSize="@dimen/_22ssp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/bg_primary_fill"
        app:layout_constraintStart_toStartOf="@id/lblTransfer"
        app:layout_constraintTop_toBottomOf="@id/lblTransfer"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@tools:sample/first_names"
        android:layout_marginHorizontal="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="@id/tvProfile"
        app:layout_constraintStart_toEndOf="@id/tvProfile"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1.Core"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAccountNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="321-1231-111"
        android:layout_marginVertical="@dimen/_4sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toEndOf="@id/tvProfile"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2.Core"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:text="@string/label_enter_amount"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2.Core"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvProfile" />

    <com.putrash.common.component.TextInputLayoutCore
        android:id="@+id/tilAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/lblAmount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAmount"
            style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.Core.Variant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_amount"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:padding="@dimen/_12sdp" />
    </com.putrash.common.component.TextInputLayoutCore>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTransfer"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Core.Fill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:elevation="0dp"
        android:text="@string/action_transfer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilAmount" />

</androidx.constraintlayout.widget.ConstraintLayout>