<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/_16sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/bottom_sheet_behavior"
    tools:context=".arch.ui.home.pay.PayFragment">

    <View
        android:id="@+id/notch"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_4sdp"
        android:background="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notch"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblPayees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_choose_payess"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2.Core"
        android:layout_margin="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="@dimen/_21sdp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPayess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblPayees"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        tools:listitem="@layout/item_user"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_enter_amount"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2.Core"
        android:layout_margin="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/rvPayess"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.putrash.common.component.TextInputLayoutCore
        android:id="@+id/tilAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        app:boxBackgroundMode="none"
        app:layout_constraintTop_toBottomOf="@id/lblAmount"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_amount"
            android:inputType="numberDecimal"
            android:padding="@dimen/_12sdp"
            style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.Core.Variant"
            android:maxLines="1" />
    </com.putrash.common.component.TextInputLayoutCore>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTransfer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:text="@string/action_transfer"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Core.Fill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilAmount"/>

</androidx.constraintlayout.widget.ConstraintLayout>